# erp-api

./: .dockerignore  .env  .env.build  .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  StukturProyek  docker-compose.yml  docker-compose.yml.build  docker-compose.yml.dist  docker-compose.yml.example  docker-compose.yml.local  docker-compose.yml.test  my.cnf  package-lock.json  package.json  supervisord.conf  test-build.sh  test-image.sh  test.sh  test_image.sh  vite.config.js
api/: Cargo.toml
api/src/: error.rs  lib.rs  openapi.rs  shared.rs
api/src/middlewares/: jwt.rs
api/src/v1/: mod.rs
api/src/v1/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs
api/src/v1/employee/: handlers.rs  models.rs  routes.rs
api/src/v1/inventory/: handlers.rs  models.rs  routes.rs
api/src/v1/inventory/handlers/: create_item.rs  delete_item.rs  mod.rs  search_items.rs  update_item.rs
api/src/v1/order/: handlers.rs  models.rs  routes.rs
config/: Cargo.toml  development.toml  test.toml
config/src/: app.rs  db.rs  file_session.rs  inertia.rs  lib.rs  meilisearch.rs  vite.rs
db/: Cargo.toml
db/src/: mysql.rs
docker/: Dockerfile  supervisord.conf
docker/1.88-dev/: Dockerfile  supervisord.conf
entity/: Cargo.toml
entity/src/: employee.rs  inventory.rs  lib.rs  order.rs  prelude.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250604_000000_create_inventory.rs  m20250604_000001_create_employee.rs  m20250604_000001_create_employees.rs  m20250604_000002_create_order.rs  m20250604_000002_create_orders.rs  m20250604_000003_create_user.rs
migrations/2025-06-04-000000_create_inventory/: up.sql
migrations/2025-06-04-000001_create_employees/: up.sql
migrations/2025-06-04-000002_create_orders/: up.sql
page/: Cargo.toml
page/src/: contact.rs  index.rs  lib.rs  routes.rs
page/src/contact/: routes.rs
page/src/index/: routes.rs
page/src/middlewares/: garbage_collector.rs  mod.rs  reflash_temporary_session.rs
page/src/todo/: mod.rs  routes.rs
page/src/todo/task/: models.rs  services.rs
page/src/v1/: mod.rs
page/src/v1/contact/: routes.rs
page/src/v1/foo/: routes.rs
page/src/v1/index/: routes.rs
page/src/v1/todo/: routes.rs
page/src/v1/todo/task/: dtos.rs  mod.rs
page/src/v1/todo_create/: routes.rs
page/src/v1/todo_store/: routes.rs
search/: Cargo.toml
search/src/: lib.rs  meilisearch.rs
src/: lib.rs  main.rs
src/api/: mod.rs  openapi.rs
src/api/v1/: mod.rs
src/api/v1/employee/: handlers.rs  mod.rs  models.rs
src/api/v1/inventory/: handlers.rs  mod.rs  models.rs  routes.rs
src/api/v1/inventory/handlers/: create_item.rs  delete_item.rs  search_items.rs  update_item.rs
src/api/v1/order/: handlers.rs  models.rs
src/config/: mod.rs  settings.rs
src/db/: mod.rs  mysql.rs  schema.rs
src/db/entities/: employees.rs  mod.rs  orders.rs  prelude.rs
src/search/: meilisearch.rs  mod.rs
src/utils/: errors.rs  mod.rs
tests/: auth.rs  common.rs  employee.rs  employee_tests.rs  error.rs  helper.rs  inventory.rs  inventory_tests.rs  middleware.rs  mod.rs  order.rs  order_tests.rs
tests/api/: error.rs  mod.rs
tests/api/middlewares/: jwt.rs
tests/api/v1/: auth.rs  auth_complete.rs  employee.rs  employee_complete.rs  inventory.rs  mod.rs  order.rs  order_complete.rs
tests/integration/: cross_functionality.rs  mod.rs
tests/page/: README.md  helper.rs  mod.rs
tests/page/integration/: form_test.rs  index_test.rs  mod.rs  server_test.rs  simple_test.rs
tests/page/v1/: contact.rs  foo.rs  index.rs  mod.rs  todo.rs  todo_create.rs  todo_store.rs
tests/unit/: mod.rs
tests/unit/auth/: jwt_tests.rs  mod.rs  validation_tests.rs
tests/unit/common/: validation_tests.rs
tests/unit/employee/: validation_tests.rs
tests/unit/inventory/: mod.rs  validation_tests.rs
tests/unit/order/: validation_tests.rs
tests_backup1/: order.rs
www/: app.tsx  root.hbs  root.html  ssr.tsx
www/pages/: Contact.tsx  Index.tsx
www/pages/Foo/: Index.tsx
www/pages/Todo/: Create.tsx  Index.tsx
