[package]
name = "erp-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
sea-orm = { version = "0.12.15", features = [ "sqlx-mysql", "runtime-actix-native-tls", "macros", "with-chrono" ] }
dotenv = "0.15.0"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
entity = { path = "./entity" }
db = { path = "./db" }
search = { path = "./search" }
config = { path = "./config" }

[dev-dependencies]
reqwest = { version = "0.12.19", features = ["json"] }
serial_test = "3.2.0"

[workspace]
members = [
    "entity",
    "db",
    "search",
    "config",
    "migration"
]
