[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
sea-orm = { version = "1.1.13", features = [ "sqlx-mysql", "runtime-actix-native-tls", "macros", "with-chrono" ] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
bcrypt = "0.15.1"
log = "0.4.27"
pin-project = "1.1.5"
futures-util = "0.3.30"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
entity = { path = "../entity" }
db = { path = "../db" }
search = { path = "../search" }
config = { path = "../config" }
thiserror = "1.0"
meilisearch-sdk = "0.28.0"

[dev-dependencies]
actix-rt = "2.10.0"
actix-web = { version = "4.11.0", features = ["macros"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.19", features = ["json"] }