[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.14.0", features = ["yaml"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
toml = "0.8.14"
sea-orm = { version = "1.1.13", features = [ "sqlx-mysql", "runtime-actix-native-tls", "macros" ] }
meilisearch-sdk = "0.28.0"
jsonwebtoken = "9.3.1"