[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.14.0", features = ["yaml"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
toml = "0.8.14"
sea-orm = { version = "1.1.13", features = [ "sqlx-mysql", "runtime-actix-native-tls", "macros" ] }
meilisearch-sdk = "0.28.0"
jsonwebtoken = "9.3.1"
dotenvy = "0.15.7"
inertia-rust = { version = "2", features = ["actix", "vite-hbs-template-resolver"] }
vite-rust = { version = "0.2" }
actix-session = "0.10.1"
tokio = { version = "1.45.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4.11.0"
serde_json = "1.0.140"
anyhow = "1.0"