[package]
name = "page"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-session = "0.10.1"
inertia-rust = { version = "2", features = ["actix", "vite-hbs-template-resolver", "actix-validator"] }
vite-rust = { version = "0.2" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
log = "0.4.27"
futures-util = "0.3.31"
rand = "0.9"
config = { path = "../config" }
validator = { version = "0.20", features = ["derive"] }
